Added docker-compose file and other implementations in backend
